# FFLeaning

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xucz/ffleaning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ffmpeg/: CMakeLists.txt  test.cpp
app/src/main/java/com/xucz/ffleaning/: FFmpegTest.java  MainActivity.java
app/src/test/java/com/xucz/ffleaning/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
scripts/: build_android_arm64-v8a_clang.sh  build_android_armv7-a_clang.sh  build_android_x86_64_clang.sh  build_android_x86_clang.sh
